[package]
name = "mahf-tsplib"
version = "0.1.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2021"

[dependencies]
mahf = { git = "https://github.com/mahf-opt/mahf" }

tspf = "0.3.1"
include_dir = "0.7.3"
anyhow = "1.0.51"
strum = { version = "0.24.1", features = ["derive"] }
serde = { version = "1.0.131", features = ["derive"] }
